--- a/css/crear-grupo.css
+++ b/css/crear-grupo.css
@@ -11,14 +11,14 @@ body {
   }
   
   
-  /* NAVBAR ROSITA */
+  /* NAVBAR */
   .vertical-navbar {
     position: fixed;
     top: 0;
     left: 0;
     width: 90px;
     height: 100%;
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,7 +106,7 @@ body {
   }
   
   .btn-cambiar-foto {
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -122,9 +122,9 @@ body {
   .grupo-nombre input {
     width: 100%;
     padding: 10px;
-    border: 2px solid #ff007f;
+    border: 2px solid #7F8CAA;
     border-radius: 5px;
-    background-color: #ff007f;
+    background-color: #B8CFCE;
     color: #fff;
   }
 
@@ -137,14 +137,14 @@ body {
   .search-bar input {
     flex: 1;
     padding: 10px;
-    border: 2px solid #ff007f;
+    border: 2px solid #7F8CAA;
     border-radius: 5px;
-    background-color: #ff007f;
+    background-color: #B8CFCE;
     color: #fff;
   }
   
   .search-bar .btn-buscar {
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -195,7 +195,7 @@ body {
   }
   
   .btn-agregar {
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -219,7 +219,7 @@ body {
   }
   
   .btn-crear-grupo {
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     color: #fff;
     border: none;
     padding: 10px 20px;
