--- a/css/perfil.css
+++ b/css/perfil.css
@@ -11,14 +11,14 @@ body {
 }
 
   
-  /* NAVBAR ROSITA */
+  /* NAVBAR */
   .vertical-navbar {
     position: fixed;
     top: 0;
     left: 0;
     width: 90px;
     height: 100%;
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,7 +117,7 @@ body {
   }
   
   .reward-item {
-    background-color: #ff007f;
+    background-color: #7F8CAA;
     padding: 10px;
     border-radius: 5px;
     display: flex;
@@ -152,7 +152,7 @@ body {
   }
   
   .btn-edit {
-    background-color: #ff007f;
+    background-color: #27548A;
     color: #fff;
   }
   
@@ -166,5 +166,5 @@ body {
   }
   
   .btn-logout:hover {
-    background-color: #ff007f;
+    background-color: #7F8CAA;
   }
